# cxx-utilities

./: .gitignore  CMakeLists.txt  README.md  clone_stats.json  parse_clones_count.py
.github/workflows/: main.yml
AppLogger/: CMakeLists.txt
cmake/: CompilerSelection.cmake
dev_containers/: Dockerfile.fedora.38  Dockerfile.fedora.38-dnf-boost  Dockerfile.ubuntu.22.04  Dockerfile.ubuntu.22.04-apt-boost  Dockerfile.ubuntu.22.04-oneapi.2024.2.1  intel-linux.jam
include/: build_version_utils.h  csv_writer.h  diffusion_eqn.h  hardware_info_utils.h  module_name.h.in  runtime_utils.h  string_utils.h  waveforms.h
include/applogger/: applogger.hxx  applogger_c_interface.hxx  apploggerwithchannels.hxx
include/benign_exceptions/: benign_exceptions.hpp
include/build_utilities/: build_version_utils.hpp  calculate_days.py  version_info.hpp.in
include/custom_exceptions/: filesystemitem_exception.hpp
include/hardware_info_utilities/: hardware_info_utils.hpp
include/load_shared_libraries/: funcloader.hxx  get_os_error.hxx  libloader.hxx
include/maths_geometry/: data_producers.hpp  machine_numerical_precision.hpp  maths_operations.hpp  numerical_analysis.hpp  numerical_solutions_ode.hpp
include/pathutils/: pathutils.hxx
include/string_utilities/: string_utils.hpp
include/system_info_utilities/: system_info_utils.hpp
include/time_utilities/: time_utils.hpp
src/: build_version_utils.cxx  hardware_info_utils.cxx  runtime_utils.cxx
src/applogger/: applogger.cxx  applogger_c_interface.cxx  apploggerwithchannels.cxx
src/benign_exceptions/: benign_exceptions.cxx
src/custom_exceptions/: benign_exceptions.cxx  filesystemitem_exception.cxx
src/pathutils/: pathutils.cxx
tests/: CMakeLists.txt  build_version_utils_tests.cxx  maths_operations_tests.cxx  test_build_version_utils.cxx  test_hardware_info_utils.cxx  test_runtime_utils.cxx  time_utils_tests.cxx
tests/applogger/: CMakeLists.txt  applogger_test.cxx
tests/build_utilities/: CMakeLists.txt
tests/maths_operations/: CMakeLists.txt  maths_operations_tests.cxx
tests/system_info_utilities/: CMakeLists.txt  system_info_utils_tests.cxx
tests/time_utilities/: CMakeLists.txt
